--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     .container {
       max-width: 800px;
       margin: 2rem auto;
-      background: rgba(255,255,255,0.95);
+      background: rgba(0, 0, 0, 0.6); /* Thay đổi background cho phù hợp tone màu */
+      color: #fff; /* Chữ màu trắng để tương phản */
       padding: 2rem;
       border-radius: 8px;
       box-shadow: 0 8px 16px rgba(0,0,0,0.3);
@@ -25,9 +26,13 @@
       text-align: center;
       margin-bottom: 1rem;
     }
+    p {
+      text-align: center;
+    }
     .line-card {
       position: relative;
-      background: #fff;
+      background: rgba(255,255,255,0.9);
+      color: #000;
       border-radius: 8px;
       padding: 1rem;
       margin-bottom: 1.5rem;
@@ -35,12 +40,12 @@
       transition: transform 0.2s, box-shadow 0.2s;
       cursor: pointer;
     }
-    /* Khi được chọn, luôn có nền sáng và border nổi bật */
-    .line-card.active {
+    .line-card:hover, .line-card.active {
       transform: translateY(-3px);
       box-shadow: 0 8px 12px rgba(0,0,0,0.3);
       border: 2px solid #2196F3;
       background-color: #f7f7f7;
+      color: #000;
     }
     .line-text {
       font-size: 1.2rem;
@@ -66,6 +71,7 @@
     #evaluation {
       margin-top: 1rem;
       background: #f1f1f1;
+      color: #000;
       padding: 0.8rem;
       border-radius: 4px;
       font-size: 0.95rem;
